# mineo

./: .env.example  .gitignore  index.html  package-lock.json  package.json  vite-plugin-quotes-mock.ts  vite-plugin-skin-export.ts  vite.config.ts  wrangler.jsonc
.claude/: launch.json
.claude/skills/create-asset-skin/: SKILL.md
.claude/skills/create-land-skin/: SKILL.md
.github/workflows/: release-widget.yml
docs/: 01-PRD.md  02-DATA-MODEL.md  03-HARVEST-ALGORITHM.md  04-ARCHITECTURE.md  05-ART-DIRECTION.md  06-UX-FLOWS.md  07-ROADMAP.md  08-SKINS.md  09-DESKTOP.md  10-SKIN-PACKAGES.md  11-ASSET-MODEL.md  12-WIDGET-RELEASE.md  README.md
functions/api/: quotes.ts
public/skins/: registry.json
src/: main.tsx
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/app/: App.tsx
src/domain/: assetInput.test.ts  assetInput.ts  currency.test.ts  currency.ts  earnings.test.ts  earnings.ts  harvest.test.ts  harvest.ts  metrics.test.ts  metrics.ts  types.ts
src/engine/: GameCanvas.tsx  board.ts  camera.ts  layout.ts  skinThumbnail.ts
src/i18n/: index.tsx  messages.ts
src/market/: quotes.ts  types.ts
src/persistence/: local.ts
src/skins/: index.ts  loader.ts  registry.ts  types.ts
src/state/: store.ts
src/styles/: global.css
src/sync/: cloud.ts
src/ui/: AssetModal.tsx  Modal.tsx  SettingsModal.tsx  SkinPicker.tsx  ThemeSwitcher.tsx  TopBar.tsx  WidgetDownloadModal.tsx  applyTheme.ts  useNow.ts
src/widget/: WidgetSettings.tsx  prefs.ts
tools/: gen_skin_image.py
worker/: index.ts
(+44 files in other folders)
