[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# 去掉默认的 "compression" 特性：它会拉入 brotli 8.0.3，而 brotli 与
# alloc-no-stdlib 存在版本错位导致编译失败。去掉后前端资源以未压缩内嵌（体积略大，功能不变）。
tauri = { version = "2.11.2", default-features = false, features = [
  "wry",
  "common-controls-v6",
  "dynamic-acl",
  "x11",
  "dbus",
  # 透明挂件窗口：macOS 透明窗口需启用私有 API（配合 tauri.conf.json 的 macOSPrivateApi）
  "macos-private-api",
] }
tauri-plugin-log = "2"
